package employee;


public class Bartender extends Employee
{

  public Bartender(String name,EmployeeType employeeType, long uniquePersonalNumber)
  {
    super(name,employeeType, uniquePersonalNumber);
  }

}
