package employee;

public class Security extends Employee
{
  public Security(String name, EmployeeType employeeType, long egn)
  {
    super(name, employeeType, egn);
  }
}
