package inventory;

public interface Orderable
{

  String getName();

  int getMilliliters();

}
